--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ github_show_profile_link: false
 github_skip_forks: false
 
 # Google Analytics
-google_analytics_tracking_id: UA-35616912-1
+google_analytics_tracking_id: #UA-35616912-1
 
 # Disqus Comments
 disqus_short_name: librakyle
